<resources>
    <string name="app_name">mvp</string>
    <string name="user_hello">你好</string>
    <string name="welcome">欢迎回来</string>
    <string name="string_login">登录</string>
    <string name="password">密码</string>
    <string name="login_username">手机/用户名/邮箱</string>
    <string name="captcha_code">验证码</string>
    <string name="register_phone_number">手机</string>
    <string name="go_login">去登录</string>
    <string name="register_text">注册</string>
    <string name="message_captcha">短信验证码</string>
    <string name="exit_login">退出</string>

</resources>
