<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="loginData"
            type="com.ltz.mymvp.data.local.LoginData" />

        <variable
            name="captchaData"
            type="com.ltz.mymvp.data.remote.CaptchaData" />

        <variable
            name="listener"
            type="com.ltz.mymvp.base.baseinterface.OnClickListener" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_username"
            android:inputType="textPersonName"
            android:text="@={loginData.userName}"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={loginData.passWord}"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <RelativeLayout
            android:id="@+id/captcha_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="@{captchaData.isShow?view.VISIBLE:view.GONE}"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <ImageView
                android:id="@+id/iv_captcha"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/captcha_holder"
                android:onClick="@{listener::onClick}"
                android:scaleType="fitXY"
                app:imageUrl="@{captchaData.img_url}" />

            <EditText
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_toLeftOf="@+id/iv_captcha"
                android:layout_toStartOf="@id/iv_captcha"
                android:hint="@string/captcha_code"
                android:singleLine="true"
                android:text="@={captchaData.verify_code}" />
        </RelativeLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableRight="@drawable/ic_send"
            android:onClick="@{listener::onClick}"
            android:paddingLeft="35dp"
            android:text="@string/string_login"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/captcha_layout" />

        <TextView
            android:id="@+id/do_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{listener::onClick}"
            android:padding="8dp"
            android:text="去注册"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/register_btn"
            app:layout_constraintStart_toStartOf="@+id/register_btn"
            app:layout_constraintTop_toBottomOf="@+id/register_btn" />

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:onClick="@{listener::onClick}"
            android:text="load"
            android:drawableRight="@drawable/ic_load"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/show_tinker_info"
            app:layout_constraintTop_toTopOf="@+id/show_tinker_info" />

        <Button
            android:id="@+id/show_tinker_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{listener::onClick}"
            android:text="tinkerInfo"
            android:drawableRight="@drawable/ic_info"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/clear_patch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{listener::onClick}"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:text="clear"
            android:drawableRight="@drawable/ic_remove"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@+id/show_tinker_info"
            app:layout_constraintTop_toTopOf="@+id/show_tinker_info" />

    </android.support.constraint.ConstraintLayout>
</layout>
